# backend

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/config/: Cargo.toml  kestrel.example.toml
crates/core/config/src/: lib.rs
crates/core/config/src/schema/: config.rs  mod.rs  sentry.rs
crates/wings/: Cargo.toml  DOCKERFILE
crates/wings/src/: errors.rs  main.rs
crates/wings/src/routes/: mod.rs  root.rs
scripts/: start.sh
