[package]
name = "kestrel-wings"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", default-features = false, features = ["json"] }
rocket_okapi = { version = "0.8", features = ["swagger"] }
schemars = "0.9"
serde = { version = "1.0", features = ["derive"] }
okapi = "0.7"
serde_json = "1.0"
kestrel-config = { path = "../core/config" }
sentry = "0.46"
ulid = "1"