[package]
name = "kestrel-config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.39", features = ["fs", "sync"] }
pretty_env_logger = "0.5"
sentry = "0.46"
sentry-anyhow = { version = "0.46", package = "sentry-anyhow" }
log = "0.4"